--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First JS</title>
+    
+    <script src="js/code.js"></script>
+
 </head>
 <body>
     <h1>Hello world!</h1>
@@ -15,9 +18,6 @@
         <li><span class="hello2">SDF</span></li>
         <li><span class="hello3">SSSSSD</span></li>
     </ul>
-    <script>
-        alert('Hello world!')
-    </script>
 
 </body>
 </html>
